[project]
name = "graphlm-dna-compression"
version = "0.1.0"
description = "Graph-theoretic and language-model-based DNA compression"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.5.1",
    "transformers==4.48.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "-p no:cacheprovider --cov=src --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["src/tests/*"]
